<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.nzbhydra</groupId>
    <artifactId>nzbhydra2</artifactId>
    <packaging>pom</packaging>
    <version>4.7.5-SNAPSHOT</version>

    <modules>
        <module>shared</module>
        <module>other</module>
        <module>core</module>
        <module>tests</module>
        <module>releases</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:theotherp/nzbhydra2.git</connection>
        <developerConnection>scm:git:git@github.com:theotherp/nzbhydra2.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.nzbhydra</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>1.0.0</version>
                <configuration>
                    <commitish>master</commitish>
                    <githubReleasesUrl>https://api.github.com/repos/theotherp/nzbhydra2/releases</githubReleasesUrl>
                    <githubTokenFile>${basedir}/core/token.txt</githubTokenFile>
                    <linuxAsset>${basedir}/releases/linux-release/target/nzbhydra2-${project.version}-linux.zip</linuxAsset>
                    <windowsAsset>${basedir}/releases/windows-release/target/nzbhydra2-${project.version}-windows.zip</windowsAsset>
                    <changelogJsonFile>${basedir}/core/src/main/resources/changelog.json</changelogJsonFile>
                    <changelogMdFile>${basedir}/changelog.md</changelogMdFile>

                    <wrapperFile1>${basedir}/releases/linux-release/include/nzbhydra2</wrapperFile1>
                    <wrapperFile2>${basedir}/releases/windows-release/include/NZBHydra2 Console.exe</wrapperFile2>
                    <wrapperFile3>${basedir}/releases/windows-release/include/NZBHydra2.exe</wrapperFile3>
                    <wrapperFile4>${basedir}/other/wrapper/nzbhydra2wrapper.py</wrapperFile4>
                    <wrapperFile5>${basedir}/other/wrapper/nzbhydra2wrapperPy3.py</wrapperFile5>
                    <wrapperHashesJsonFile>${basedir}/core/src/main/resources/wrapperHashes.json</wrapperHashesJsonFile>

                    <tagName>v${project.version}</tagName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <profiles>
        <profile>
            <id>SUREFIRE-1588</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
            </properties>
        </profile>
    </profiles>

    <properties>
        <spring.boot.version>3.0.0</spring.boot.version>
        <spring.boot.maven.version>2.7.5</spring.boot.maven.version>
        <spring.oxm.version>6.0.2</spring.oxm.version>
        <spring.test.version>6.0.0</spring.test.version>
        <spring.security.test.version>6.0.0</spring.security.test.version>
        <jackson.version>2.14.0</jackson.version>
        <lombok.version>1.18.24</lombok.version>
        <logback.version>1.4.5</logback.version>
        <guava.version>23.0</guava.version>
        <junit.version>4.13.2</junit.version>
        <okhttp.version>4.9.3</okhttp.version>
        <logstash-logback-encoder.version>7.1.1</logstash-logback-encoder.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-io.version>2.11.0</commons-io.version>
        <flyway-core.version>9.8.3</flyway-core.version>
        <jaxb.sun.core.version>2.3.0.1</jaxb.sun.core.version>
        <jaxb.sun.impl.version>3.0.1</jaxb.sun.impl.version>
        <maven.compiler.plugin.version>3.6.2</maven.compiler.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <uri-scheme-handler.version>2.0.0</uri-scheme-handler.version>
    </properties>

    <repositories>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>


</project>
